--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
+    <title>The Grand Archives | Sir R.N.C</title>
+    <link rel = "stylesheet" href = "style.css">
+    <link href = "https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap" rel = "stylesheet">
+</head>
+  
+<body>
+    <header>
+        <h1>The Grand Archives</h1>
+        <p class = "subtitle">"Where all realities converge."</p>
+    </header>
 
+    <main class = "portal-grid">
+        <a href = "#" class = "card">
+            <div class = "card-content">
+                <h2>Project : Visual Novel</h2>
+                <p class = "description">A narrative of shadows and choices. Exploring the boundaries between the reader and the void.</p>
+                <span class = "status">Status : In Progress</span>
+            </div>
+        </a>
+
+        <a href = "#" class = "card">
+            <div class = "card-content">
+                <h2>[Insert Title]</h2>
+                <p class = "description">[Insert Description]</p>
+                <span class = "status">Status : [Insert Status]</span>
+            </div>
+        </a>
+
+        <a href = "https://github.com/SirRNCB" target="_blank" class="card author-card">
+            <div class = "card-content">
+                <h2>The Author</h2>
+                <p class = "description">Sir R.N.C de Beaumont. <br> Keeper of the Keys.</p>
+                <span class = "status">Profile</span>
+            </div>
+        </a>
+    </main>
+
+    <footer>
+        <p>&copy; 2026 Sir R.N.C. Crafted in the Void.</p>
+    </footer>
+</body>
+</html>
