Modifications on the card content

--- a/projects_hub.html
+++ b/projects_hub.html
@@ -58,25 +58,42 @@
     <div class="page-wrapper">
         <main class="main-content layout-dashboard">
             
-            <header class="header-page">
+            <header class="header-dashboard">
                 <h1 style="font-size: 3rem;">THE MANIFESTO</h1>
                 <p class="subtitle">"The blueprint of worlds yet to come."</p>
             </header>
 
             <div class="article-body">
                 <p class="flavor-text">
-                    Here lies the categorization of all intellectual properties managed by Sir R.N.C. 
-                    Projects are divided into three tiers of reality.
-                </p>
+                    Here lies the categorisation of all my works.
+                    As of now, they are divided into four groups.
+                </p>	
 
-                <div class="tier-grid">
-                    <div class="tier-card">
-                        <h2>Tier 1: Visual Novels</h2>
-                        <p>Interactive narratives requiring code, art, and complex branching paths. These are the "Heavy" projects.</p>
+                <div class="card">	
+                    <div class="card-content">
+						<!-- class="text-gold" -->
+                        <h2>Web Light novels</h2>
+                        <p>[Add description]</p>
                     </div>
-                    <div class="tier-card">
-                        <h2 class="text-gold">Tier 2: Anthologies</h2>
-                        <p>Pure literary collections. The Silent Verse and other short story collections reside here.</p>
+					<div class="card-content">
+                        <h2>Web Novels</h2>
+                        <p>[Add description]</p>
+                    </div>
+					<div class="card-content">
+                        <h2>Interactive Novels</h2>
+                        <p>[Add description]</p>
+                    </div>
+					<div class="card-content">
+                        <h2>Fan fictions</h2>
+                        <p>[Add description]</p>
+                    </div>
+					<div class="card-content">
+                        <h2>Books</h2>
+                        <p>[Add description]</p>
+                    </div>
+					<div class="card-content">
+                        <h2>Visual Novels</h2>
+                        <p>[Add description]</p>
                     </div>
                 </div>
             </div>
